--- a/carddetails.css
+++ b/carddetails.css
@@ -1,3 +1,13 @@
+*{
+    
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+    line-height: 230%;
+    margin-left: 5px;
+}
 #brown{
     border: 1px solid greenyellow;
     background-color: #b0a16e;
@@ -6,13 +16,52 @@
 }
 #white{
     border: 1px solid red;
-    width: 50%;
+    width: 70%;
     height: 550px;
     margin:auto;
+    display: flex;
 }
 #logo{
-    border: 1px solid red;
-    width: 10%;
+    /* border: 1px solid red; */
+    width: 5%;
     margin-left: 200px;
     margin-top: 30px;
+   
+}
+#logo-id{
+    height: 60px;
+    width: 100px
+}
+#left{
+    border: 1px solid rgb(143, 29, 48);
+    width: 50%;
+    height: 550px;
+    margin-left: 0px;
+}
+#right{
+    border: 1px solid rgb(143, 29, 48);
+    width: 50%;
+    height: 550px;
+    margin-left: 0px;
+}
+#debitcard{
+    padding: 10px;
+    width: 100%;
+    text-align: left;
+    margin-left: 0px;
+    border-color: transparent;
+}
+#netbanking{
+    padding: 10px;
+    width: 100%;
+    text-align: left;
+    margin-left: 0px;
+    border-color: transparent;
+}
+#wallet{
+    padding: 10px;
+    width: 100%;
+    text-align: left;
+    margin-left: 0px;
+    border-color: transparent;
 }
